# conic

./: .gitignore  CMakeLists.txt  README.md
example/: README.md  example.cpp  example_dynamic.cpp
include/: conic.hpp  conic_cv.hpp  conic_motion.hpp
src/: conic.cpp
